frontend: переписал структуру отображения данных. backend: Добавил подключение к базе данных postgres и миграцию через flyway.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=Full_Stack_Spring_Boot__React
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.jdbc-url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=password
+#spring.datasource.driver-class-name=org.postgresql.Driver
+
+server.servlet.contextPath=/api
+
+api.datasource.jdbc-url=jdbc:postgresql://localhost:5432/postgres
+api.datasource.username=postgres
+api.datasource.password=password
+api.datasource.driver-class-name=org.postgresql.Driver
