frontend: рефакторинг backend: рефакторинг

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ api.datasource.jdbc-url=jdbc:postgresql://localhost:5432/postgres
 api.datasource.username=postgres
 api.datasource.password=password
 api.datasource.driver-class-name=org.postgresql.Driver
+
+
+#spring.flyway.validate-on-migrate=false
