--- a/src/js/package.json
+++ b/src/js/package.json
@@ -2,12 +2,14 @@
   "name": "js",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.21.6",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
